<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorPrimaryBackground"
    android:padding="0dp">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimaryBackground"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:layout_constraintTop_toTopOf="parent"
        >
        <!-- Toolbar content -->
        <ImageView
            android:id="@+id/appLogo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:adjustViewBounds="false"
            android:contentDescription="@string/app_logo"
            android:scaleType="centerCrop"
            android:src="@mipmap/therapy_ai_logo_squircle"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            />
        <TextView
            android:id="@+id/toolbarTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textColor="?attr/colorOnPrimaryBackground"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_gravity="center" />
    </androidx.appcompat.widget.Toolbar>


    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/statsViewPager"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="16dp"
        android:paddingHorizontal="40dp"
    android:clipToPadding="false"
    app:layout_constraintBottom_toTopOf="@+id/dotsIndicator"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/toolbar"
    />

    <com.tbuonomo.viewpagerdotsindicator.DotsIndicator
        android:id="@+id/dotsIndicator"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        app:selectedDotColor="?attr/colorPrimary"
        app:dotsColor="?attr/colorOnPrimaryBackground"
        app:layout_constraintBottom_toTopOf="@id/loginButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <!-- Rest of your layout (Buttons, TextView) -->
    <com.google.android.material.button.MaterialButton
        android:id="@+id/loginButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="8dp"
        android:padding="12dp"
        android:text="@string/login"
        android:background="@drawable/btn_pill_gradient"
    app:layout_constraintBottom_toTopOf="@id/moreAboutSpanish"
    app:layout_constraintEnd_toEndOf="parent"
    style="@style/Widget.MaterialComponents.Button"

    app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/moreAboutSpanish"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:gravity="center"
        android:text="@string/moreAboutSpanish"
        android:textSize="12sp"
        android:textColor="?attr/colorPrimary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:clickable="true"
        android:focusable="true"
        />

</androidx.constraintlayout.widget.ConstraintLayout>
